# mpikonoha

./: CMakeLists.txt
include/konoha1/: konoha_api.h  konoha_t.h
package/konoha.compiler/: CMakeLists.txt  konohac.c
package/konoha.compiler.optllvm/: CMakeLists.txt  opt.cpp
package/konoha.mpi/: CMakeLists.txt  konoha_mpi.h  mpi.c  mpi.k
package/konoha.mpi/ac/collective/: CollectiveReduceNativeFunction.k
package/konoha.mpi/bench/mat-mat/: 1dim.k  2dim.c  2dim.k  blas.k  clear.sh  parallel.sh  single.k  single.sh  start.sh
package/konoha.mpi/bench/mat-mat/src/: parallel.c  parallel.k  parallel.py  parallel.rb  single.c  single.k  single.py  single.rb  single_blas.c  single_blas.k  single_blas.py
package/konoha.mpi/bench/ping-pong/: clear.sh  float.sh  int.sh  start.sh
package/konoha.mpi/bench/ping-pong/src/: float.py  float.rb  int.py  int.rb
package/konoha.mpi/misc/: mpidebug
package/konoha.mpi/sample/: fft.k  mat-mat-2dim.k  mat-mat.c
package/konoha.mpi/src/: array.c  coll.c  comm.c  data.c  general.c  op.c  pt2pt.c
src/lang/: commons.h  script.c
src/main/: commons.h  runtime.c  struct.c
